--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     </div>
 
 
+
     <div class="wrapper">
 
         <section class="help-bar d-none d-md-block">
@@ -180,7 +181,7 @@
                                 <i class="fas fa-rupee-sign"></i> Free of cost
                             </span>
                             <span>
-                                <i class="fas fa-clock"></i> 9:00 AM <a href="" data-target="" data-toggle="modal">View full Schedule</a>
+                                <i class="fas fa-clock"></i> 9:00 AM <a href="" data-target="#schedule" data-toggle="modal">View full Schedule</a>
                             </span>
                             <span>
                                 <i class="fas fa-user"></i> Working Professionals & Students
@@ -256,7 +257,7 @@
                                     <i class="fas fa-rupee-sign"></i> Free of cost
                                 </span>
                                 <span>
-                                    <i class="fas fa-clock"></i> 9:00 AM <a href="" data-target="" data-toggle="modal">View full Schedule</a>
+                                    <i class="fas fa-clock"></i> 9:00 AM <a href="" data-target="#schedule" data-toggle="modal">View full Schedule</a>
                                 </span>
                                 <span>
                                     <i class="fas fa-user"></i> Working Professionals & Students
@@ -1505,6 +1506,143 @@
     </div>
 
 
+
+    <!-- Modal -->
+    <div class="modal fade" id="schedule" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Full Schedule</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <img src="dist/img/cross.svg" alt="">
+              </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12">
+                                <table class="table mt-3">
+                                    <thead class="thead-dark">
+                                        <tr>
+                                            <th>Date & Time</th>
+                                            <th>Event Name</th>
+                                            <th>Details</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                        <tr>
+                                            <td>00th ABC 20XX, 00:00 AB</td>
+                                            <td>Lorem ipsum dolor</td>
+                                            <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-chevron-left"></i> Back</button>
+                    <button type="button" class="btn btn-primary">Download Schedule <i class="fas fa-download"></i></button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
